# AI-Job-Description-Generator

./: .gitignore  README.md  manage.py  pyproject.toml  schema.yml
builder/: models.py  serializers.py  urls.py  utils.py  views.py
env/: .env
job_description_builder/: asgi.py  settings.py  urls.py  wsgi.py
subscriptions/: admin.py  models.py  serializers.py  urls.py  views.py
subscriptions/migrations/: 0001_initial.py  0002_subscription.py
templates/: swagger-ui.html
