[tool.poetry]
name = "job-description-builder"
version = "0.1.0"
description = ""
authors = ["Ramzan-Ali12 <m.ramzan.iub.edu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
djangorestframework = "^3.15.2"
drf-spectacular = "^0.27.2"
python-dotenv = "^1.0.1"
djangorestframework-simplejwt = "^5.3.1"
psycopg2 = "^2.9.10"
langchain-openai = "^0.2.2"
langchain = "^0.3.3"
stripe = "^11.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
